// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedGif rendering 1`] = `
Array [
  Object {
    "node": <AnimatedGif
      mediaId="12345"
    />,
    "path": "$",
    "type": "unit",
    "value": Object {
      "attachment": Object {
        "source": Object {
          "id": "12345",
          "parameters": Object {
            "additional_owners": undefined,
            "media_category": undefined,
            "shared": undefined,
          },
          "type": "id",
        },
        "type": "animated_gif",
      },
      "type": "media",
    },
  },
]
`;

exports[`AnimatedGif rendering 2`] = `
Array [
  Object {
    "node": <AnimatedGif
      shared={true}
      url="http://foo.io/bar.mp4"
    />,
    "path": "$",
    "type": "unit",
    "value": Object {
      "attachment": Object {
        "source": Object {
          "parameters": Object {
            "additional_owners": undefined,
            "media_category": undefined,
            "shared": "true",
          },
          "type": "url",
          "url": "http://foo.io/bar.mp4",
        },
        "type": "animated_gif",
      },
      "type": "media",
    },
  },
]
`;

exports[`AnimatedGif rendering 3`] = `
Array [
  Object {
    "node": <AnimatedGif
      additionalOwners={
        Array [
          "12345",
        ]
      }
      assetTag="MyAnimatedGif"
      fileData={
        Object {
          "data": Array [
            102,
            111,
            111,
          ],
          "type": "Buffer",
        }
      }
      fileSize={1234}
      fileType="image/gif"
      mediaCategory="dm_gif"
      shared={true}
    />,
    "path": "$",
    "type": "unit",
    "value": Object {
      "attachment": Object {
        "source": Object {
          "assetTag": "MyAnimatedGif",
          "fileData": Object {
            "data": Array [
              102,
              111,
              111,
            ],
            "type": "Buffer",
          },
          "parameters": Object {
            "additional_owners": "12345",
            "media_category": "dm_gif",
            "media_type": "image/gif",
            "shared": "true",
            "total_bytes": 1234,
          },
          "type": "file",
        },
        "type": "animated_gif",
      },
      "type": "media",
    },
  },
]
`;

exports[`Photo rendering 1`] = `
Array [
  Object {
    "node": <Photo
      mediaId="12345"
    />,
    "path": "$",
    "type": "unit",
    "value": Object {
      "attachment": Object {
        "source": Object {
          "id": "12345",
          "parameters": Object {
            "additional_owners": undefined,
            "media_category": undefined,
            "shared": undefined,
          },
          "type": "id",
        },
        "type": "photo",
      },
      "type": "media",
    },
  },
]
`;

exports[`Photo rendering 2`] = `
Array [
  Object {
    "node": <Photo
      shared={true}
      url="http://foo.io/bar.mp4"
    />,
    "path": "$",
    "type": "unit",
    "value": Object {
      "attachment": Object {
        "source": Object {
          "parameters": Object {
            "additional_owners": undefined,
            "media_category": undefined,
            "shared": "true",
          },
          "type": "url",
          "url": "http://foo.io/bar.mp4",
        },
        "type": "photo",
      },
      "type": "media",
    },
  },
]
`;

exports[`Photo rendering 3`] = `
Array [
  Object {
    "node": <Photo
      additionalOwners={
        Array [
          "12345",
        ]
      }
      assetTag="MyPhoto"
      fileData={
        Object {
          "data": Array [
            102,
            111,
            111,
          ],
          "type": "Buffer",
        }
      }
      fileSize={1234}
      fileType="image/jpeg"
      mediaCategory="dm_image"
      shared={true}
    />,
    "path": "$",
    "type": "unit",
    "value": Object {
      "attachment": Object {
        "source": Object {
          "assetTag": "MyPhoto",
          "fileData": Object {
            "data": Array [
              102,
              111,
              111,
            ],
            "type": "Buffer",
          },
          "parameters": Object {
            "additional_owners": "12345",
            "media_category": "dm_image",
            "media_type": "image/jpeg",
            "shared": "true",
            "total_bytes": 1234,
          },
          "type": "file",
        },
        "type": "photo",
      },
      "type": "media",
    },
  },
]
`;

exports[`Video rendering 1`] = `
Array [
  Object {
    "node": <Video
      mediaId="12345"
    />,
    "path": "$",
    "type": "unit",
    "value": Object {
      "attachment": Object {
        "source": Object {
          "id": "12345",
          "parameters": Object {
            "additional_owners": undefined,
            "media_category": undefined,
            "shared": undefined,
          },
          "type": "id",
        },
        "type": "video",
      },
      "type": "media",
    },
  },
]
`;

exports[`Video rendering 2`] = `
Array [
  Object {
    "node": <Video
      shared={true}
      url="http://foo.io/bar.mp4"
    />,
    "path": "$",
    "type": "unit",
    "value": Object {
      "attachment": Object {
        "source": Object {
          "parameters": Object {
            "additional_owners": undefined,
            "media_category": undefined,
            "shared": "true",
          },
          "type": "url",
          "url": "http://foo.io/bar.mp4",
        },
        "type": "video",
      },
      "type": "media",
    },
  },
]
`;

exports[`Video rendering 3`] = `
Array [
  Object {
    "node": <Video
      additionalOwners={
        Array [
          "12345",
        ]
      }
      assetTag="MyVideo"
      fileData={
        Object {
          "data": Array [
            102,
            111,
            111,
          ],
          "type": "Buffer",
        }
      }
      fileSize={1234}
      fileType="video/mp4"
      mediaCategory="dm_video"
      shared={true}
    />,
    "path": "$",
    "type": "unit",
    "value": Object {
      "attachment": Object {
        "source": Object {
          "assetTag": "MyVideo",
          "fileData": Object {
            "data": Array [
              102,
              111,
              111,
            ],
            "type": "Buffer",
          },
          "parameters": Object {
            "additional_owners": "12345",
            "media_category": "dm_video",
            "media_type": "video/mp4",
            "shared": "true",
            "total_bytes": 1234,
          },
          "type": "file",
        },
        "type": "video",
      },
      "type": "media",
    },
  },
]
`;
